[package]
name = "thermostat"
version = "0.1.0"
authors = ["Jonathan Mast <jon@jonmast.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dht22_pi = "0.2.0"
rppal = "0.11.3"
libc = "0.2.66"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", default-features = false, features = ["bundled", "build_bindgen"] }
