[package]
name = "thermostat"
version = "0.1.0"
authors = ["Jonathan Mast <jon@jonmast.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
dht22_pi = "0.2.0"
rppal = "0.11.3"
libc = "0.2.66"
pwr-hd44780 = "0.1.3"
rumq-client = "0.1.0-alpha.10"
tokio = { version = "0.2.19" }
futures = "0.3.4"
